# it-tools-kirigami

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPER_ROADMAP.md  README.md  THIRD_PARTY_NOTICES.md  app.pastetools.Tools.desktop  app.pastetools.Tools.json  app.pastetools.Tools.metainfo.xml  org.kde.tools.desktop  update_qml.py
.github/workflows/: flatpak-bundle.yml
scripts/: build-chrono-bundle.js  create-flatpak-signing-key.sh  deploy-web.sh  publish-web.sh  release-flatpak.sh
src/: basetool.h  conversiontool.h  crontool.h  hashtool.h  idtool.h  main.cpp  mathtool.h  mimetool.h  networktool.h  qrcodetool.h  resources.qrc  texttool.h  timetool.h  toolmanager.h  urltool.h
src/contents/ui/: Dashboard.qml  main.qml  mimetypes.json  tools.json
src/contents/ui/tools/: AppTextArea.qml  AppTextField.qml  Base64Page.qml  BaseConverterPage.qml  BasicAuthPage.qml  BcryptPage.qml  CaseConverterPage.qml  ChmodPage.qml  ColorConverterPage.qml  CronPage.qml  CsvToJsonPage.qml  DateTimeConverterPage.qml  EmailNormalizerPage.qml  EpochConverterPage.qml  EpochParserWorker.js  HashPage.qml  HmacPage.qml  HtmlEntitiesPage.qml  HttpStatusPage.qml  Ipv4ConverterPage.qml  Ipv4RangeExpanderPage.qml  Ipv4SubnetPage.qml  JsonFormatterPage.qml  JsonMinifyPage.qml  JsonToCsvPage.qml  JsonToTomlPage.qml  JsonToXmlPage.qml  JsonYamlPage.qml  JwtPage.qml  ListConverterPage.qml  LoremIpsumPage.qml  MacGeneratorPage.qml  MarkdownPage.qml  MathEvaluatorPage.qml  MimeTypesPage.qml  NatoAlphabetPage.qml  NumeronymPage.qml  OutputArea.qml  OutputField.qml  PercentageCalculatorPage.qml  (+19 more)
tests/: tools_test.cpp
tests/data/: base64_cases.json  base_cases.json  basic_auth_cases.json  case_cases.json  chmod_cases.json  color_cases.json  cron_cases.json  csv_cases.json  email_cases.json  generator_cases.json  hash_cases.json  html_entities_cases.json  id_cases.json  ipv4_range_cases.json  json_format_cases.json  json_minify_cases.json  jwt_cases.json  list_cases.json  lorem_cases.json  math_evaluator_cases.json  mime_cases.json  nato_cases.json  network_cases.json  numeronym_cases.json  obfuscate_cases.json  percentage_calculator_cases.json  percentage_change_cases.json  percentage_ratio_cases.json  roman_cases.json  slugify_cases.json  temperature_cases.json  text_binary_cases.json  text_stats_cases.json  text_to_unicode_cases.json  time_cases.json  toml_cases.json  unicode_to_text_cases.json  url_cases.json  url_encoding_cases.json  yaml_json_cases.json
web/: docs.html  index.html  styles.css
